# zinot-project

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  LibConfig.cmake  Libraries.cmake  README.md
glloadgen/: CMakeLists.txt  gl_core_3_3.cpp
glloadgen/src/: gl_core_3_3.hpp
home/logs/: log
home/media/: scene.json
home/media/models/: table.json  tex.zitex  untitled.dae
home/media/models/table/: table.json
home/media/models/ursus/: ursus.mtl
home/media/shaders/: lightPassShader.shd  pbrDoubleUVFrag.glsl  pbrDoubleUVShader.shd  pbrDoubleUVVert.glsl  shader.fs  shader.fs.glsl  shader.vs  shader.vs.glsl
home/media/textures/: sample.zitex
home/sdk/textool/: default-config.json
zimesh-plugin/: zimesh_plugin.py
zimesh-plugin/src/: __init__.py
zinot-engine/: CMakeLists.txt
zinot-engine/tests/: MapResMgrTest.cpp  NamesRegisterTest.cpp  ShaderDescDaoTest.cpp
zinot-engine/zinot-engine/: main.cpp
zinot-engine/zinot-engine/dao/: CameraDao.cpp  CameraDao.hpp  ObjectDao.cpp  SceneDao.cpp  SceneDao.hpp  ShaderDescDao.cpp  ShaderDescDao.hpp
zinot-engine/zinot-engine/eng/: Engine.cpp  Engine.hpp  FPSCamera.cpp  FPSCamera.hpp  ResMgrList.cpp  ResMgrList.hpp  Viewport.cpp  Viewport.hpp  Window.cpp  Window.hpp
zinot-engine/zinot-engine/engine/: Engine.cpp  Engine.hpp  Viewport.cpp  Viewport.hpp  Window.hpp
zinot-engine/zinot-engine/engine/resources/: GpuProgram.cpp  GpuProgram.hpp  Shader.hpp  Texture.cpp  Texture.hpp
zinot-engine/zinot-engine/engine/resources/models/: Material.cpp  Material.hpp  Model.cpp  Model.hpp
zinot-engine/zinot-engine/render/: DeferredRenderer.cpp  DeferredRenderer.hpp
zinot-engine/zinot-engine/res/: GpuProgram.cpp  GpuProgram.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
zinot-engine/zinot-engine/res-sys/: MapResMgr.cpp  MapResMgr.hpp  NamesRegister.cpp  NamesRegister.hpp  Resource.cpp  Resource.hpp
zinot-engine/zinot-engine/res/models/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelNode.cpp  ModelNode.hpp  VertexAttribPointer.cpp  VertexAttribPointer.hpp
zinot-engine/zinot-engine/resources/: MapResMgr.cpp  MapResMgr.hpp  NamesRegister.hpp  Resource.hpp
zinot-engine/zinot-engine/scene/: CameraDao.cpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp  ShaderDao.hpp
zinot-engine/zinot-engine/scene/components/: Component.cpp  Component.hpp  ModelRenderer.cpp  ModelRenderer.hpp  Transform.cpp  Transform.hpp
zinot-engine/zinot-engine/scene/dao/: CameraDao.hpp  ObjectDao.hpp  SceneDao.cpp  SceneDao.hpp  ShaderDao.cpp
zinot-textool/: CMakeLists.txt
zinot-textool/zinot-textool/: Application.cpp  Application.hpp  main.cpp
zinot-textool/zinot-textool/conf/: Configuration.cpp  Configuration.hpp  GlBindTexture.cpp  GlBindTexture.hpp  GlTexImage.cpp  GlTexImage.hpp  GlTexParameter.cpp  GlTexParameter.hpp  LayersNamePatterns.cpp  LayersNamePatterns.hpp
zinot-textool/zinot-textool/config/: ConfigDao.cpp  ConfigDao.hpp  GlBindTextureDao.cpp  GlBindTextureDao.hpp  GlTexImageDao.cpp  GlTexImageDao.hpp  GlTexParameterDao.cpp  GlTexParameterDao.hpp  LayersNamePatternsDao.cpp  LayersNamePatternsDao.hpp
zinot-textool/zinot-textool/conv/: Converter.hpp  ConverterFactory.cpp  ConverterFactory.hpp  Mipmap.cpp  Mipmap.hpp  PngConverter.cpp  PngConverter.hpp  ZitexConverter.cpp  ZitexConverter.hpp
zinot-textool/zinot-textool/convert/: Converter.cpp  Converter.hpp  ConverterFactory.cpp  ConverterFactory.hpp  Mipmap.cpp  Mipmap.hpp  PngConverter.cpp  PngConverter.hpp  PngLoader.cpp  PngLoader.hpp  ZitexConverter.cpp  ZitexConverter.hpp
zinot-utils/: CMakeLists.txt
zinot-utils/tests/: EndianTest.cpp  ZimeshJsonTest.cpp  main.cpp
zinot-utils/tests/unicode/: UnicodeTest.cpp  Utf16Test.cpp  Utf32Test.cpp  Utf8Test.cpp
zinot-utils/zinot-utils/: Endian.cpp  Endian.hpp  Logger.cpp  Logger.hpp  Utf8String.cpp  Utf8String.hpp
zinot-utils/zinot-utils/json/: JsonDao.cpp  JsonDao.hpp  JsonReader.cpp  JsonReader.hpp
zinot-utils/zinot-utils/tex/: Header.cpp  Header.hpp  Reader.cpp  Reader.hpp  TexImageHeader.cpp  TexImageHeader.hpp  Writer.cpp  Writer.hpp
zinot-utils/zinot-utils/unicode/: Unicode.cpp  Unicode.hpp  Utf16.cpp  Utf16.hpp  Utf32.cpp  Utf32.hpp  Utf8.cpp  Utf8.hpp
zinot-utils/zinot-utils/zimesh-json/: JSONData.cpp  JSONData.hpp  JSONReader.cpp  JSONReader.hpp  Material.cpp  Material.hpp  MaterialDao.cpp  MaterialDao.hpp  Mesh.cpp  Mesh.hpp  MeshDao.cpp  MeshDao.hpp  Object.cpp  Object.hpp  ObjectDao.cpp  ObjectDao.hpp  UvLayer.cpp  UvLayer.hpp  UvLayerDao.cpp  UvLayerDao.hpp  ZimeshJsonDao.cpp  ZimeshJsonDao.hpp  ZimeshJsonReader.cpp  ZimeshJsonReader.hpp
zinot-utils/zinot-utils/zitex/: FileHeader.cpp  FileHeader.hpp  Reader.cpp  Reader.hpp  TexImageHeader.cpp  TexImageHeader.hpp  Writer.cpp  Writer.hpp
